# pulse-flow-api

./: .env.dev  .env.example  .env.staging  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: auth.py  sectors.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/domain/: README.md  __init__.py
app/domain/common/repositories/: base.py
app/domain/sector/models/: sector.py
app/domain/sector/repositories/: sector.py
app/domain/sector/schemas/: sector.py
app/domain/sector/services/: sector.py
app/domain/user/models/: user.py
app/domain/user/repositories/: user.py
app/domain/user/schemas/: user.py
app/domain/user/services/: user.py
app/infrastructure/: README.md  alembic.ini
app/infrastructure/core/: config.py  security.py
app/infrastructure/db/: base.py  session.py
app/infrastructure/migrations/: env.py
app/infrastructure/migrations/versions/: 17b0243dc4d1_add_sectors_table.py  5332658934f3_initial_migration.py
app/models/: sector.py  user.py
app/repositories/: base.py  sector.py  user.py
app/schemas/: auth.py  sector.py  user.py
app/services/: sector.py  user.py
docs/: README.md
docs/diagrams/: architecture_layers.puml  c4_component.puml  c4_container.puml  c4_context.puml  data_flow.puml
migrations/: env.py
migrations/versions/: 7235d0e3939e_add_new_table_to_register_hospital_.py
scripts/: README.md  generate_diagrams.sh  start.sh
